fluent-syntax/test/fixtures_behavior/placeable_without_close_bracket.ftl
key = { $num

//~ ERROR E0003, pos 12, args "}"
